# advent-rs

./: README.md  day.sh  justfile
2015/: README.md
2015/day01/: Cargo.toml
2015/day01/src/: main.rs
2015/day02/: Cargo.toml
2015/day02/src/: main.rs
2015/day03/: Cargo.toml
2015/day03/src/: main.rs
2015/day04/: Cargo.toml
2015/day04/src/: main.rs
2015/day05/: Cargo.toml
2015/day05/src/: main.rs
2015/day06/: Cargo.toml
2015/day06/src/: main.rs
2015/day07/: Cargo.toml
2015/day07/src/: main.rs
2015/day08/: Cargo.toml
2015/day08/src/: main.rs
2015/day09/: Cargo.toml
2015/day09/src/: main.rs
2015/day10/: Cargo.toml
2015/day10/src/: main.rs
2015/day11/: Cargo.toml
2015/day11/src/: main.rs
2015/day12/: Cargo.toml
2015/day12/src/: main.rs
2015/day13/: Cargo.toml
2015/day13/src/: main.rs
2015/day14/: Cargo.toml
2015/day14/src/: main.rs
2015/day15/: Cargo.toml
2015/day15/src/: main.rs
2015/day16/: Cargo.toml
2015/day16/src/: main.rs
2015/day17/: Cargo.toml
2015/day17/src/: main.rs
2015/day18/: Cargo.toml
2015/day18/src/: main.rs
2015/day19/: Cargo.toml
2015/day19/src/: main.rs
2015/day20/: Cargo.toml
2015/day20/src/: main.rs
2015/day21/: Cargo.toml
2015/day21/src/: main.rs
2015/day22/: Cargo.toml
2015/day22/src/: main.rs
2015/day23/: Cargo.toml
2015/day23/src/: main.rs
2015/day24/: Cargo.toml
2015/day24/src/: main.rs
2015/day25/: Cargo.toml
2015/day25/src/: main.rs
2016/assembunny/: Cargo.toml
2016/assembunny/src/: lib.rs
2016/day01/: Cargo.toml
2016/day01/src/: main.rs
2016/day02/: Cargo.toml
2016/day02/src/: main.rs
2016/day03/: Cargo.toml
2016/day03/src/: main.rs
2016/day04/: Cargo.toml
2016/day04/src/: main.rs
2016/day05/: Cargo.toml
2016/day05/src/: main.rs
2016/day06/: Cargo.toml
2016/day06/src/: main.rs
2016/day07/: Cargo.toml
2016/day07/src/: main.rs
2016/day08/: Cargo.toml
2016/day08/src/: main.rs
2016/day09/: Cargo.toml
2016/day09/src/: main.rs
2016/day10/: README.md
2016/day10/src/: main.rs
2016/day11/: Cargo.toml
2016/day11/src/: main.rs
2016/day12/src/: main.rs
2016/day13/src/: main.rs
2016/day14/: Cargo.toml
2016/day14/src/: main.rs
2016/day15/: Cargo.toml
2016/day15/src/: main.rs
2016/day16/: Cargo.toml
2016/day16/src/: main.rs
2016/day17/: Cargo.toml
2016/day17/src/: main.rs
2016/day18/src/: main.rs
2016/day19/: Cargo.toml
2016/day20/: Cargo.toml
2016/day22/: Cargo.toml
2016/day23/: Cargo.toml
2016/day24/: Cargo.toml
2017/day02/: Cargo.toml
2017/day03/: Cargo.toml
2017/day06/: Cargo.toml
2017/day08/: Cargo.toml
2017/day09/: Cargo.toml
2017/day10/: Cargo.toml
2017/day12/: Cargo.toml
2017/day14/: Cargo.toml
2021/day01/: Cargo.toml
2021/day02/: Cargo.toml
2021/day03/: Cargo.toml  three.py
2021/day04/: Cargo.toml
2021/day05/: Cargo.toml
2021/day06/: Cargo.toml
2021/day07/: Cargo.toml  day5.py
2021/day08/: Cargo.toml
2021/day10/: Cargo.toml
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml
2021/day14/: Cargo.toml
2021/day15/: Cargo.toml
2021/day17/: Cargo.toml
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml
2021/day21/: Cargo.toml
2021/day21/src/: main.rs
2021/day23/: Cargo.toml
2021/day24/: Cargo.toml  input-analysis.txt
2022/day01/: Cargo.toml
2022/day02/: Cargo.toml
2022/day03/: Cargo.toml
2022/day04/: Cargo.toml
2022/day05/: Cargo.toml
2022/day07/: Cargo.toml
2022/day08/: Cargo.toml
2022/day09/: Cargo.toml
2022/day11/: Cargo.toml
2022/day11/src/: main.rs
2022/day12/: Cargo.toml
2022/day13/: Cargo.toml
2022/day14/: Cargo.toml
2022/day15/: Cargo.toml
2022/day16/: Cargo.toml
2022/day17/: Cargo.toml
2022/day18/: Cargo.toml
2022/day19/: Cargo.toml
2022/day20/: Cargo.toml
2022/day21/: Cargo.toml
2022/day22/: Cargo.toml
2022/day23/: Cargo.toml
2022/day24/: Cargo.toml
2022/day25/: Cargo.toml
2023/day01/: Cargo.toml
2023/day02/: Cargo.toml
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day06/: Cargo.toml
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day09/: Cargo.toml
2023/day10/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day13/: Cargo.toml
2023/day14/: Cargo.toml
2023/day15/: Cargo.toml
2023/day16/: Cargo.toml
2023/day17/: Cargo.toml
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day20/: Cargo.toml
2023/day21/: Cargo.toml
2023/day21/src/: main.rs
2023/day22/: Cargo.toml
2023/day23/: Cargo.toml
2023/day23/src/: main.rs
2023/day24/: Cargo.toml
2023/day24/src/: main.rs
2023/day25/: Cargo.toml  viz.dot
2024/day01/: Cargo.toml
2024/day02/: Cargo.toml
2024/day03/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day10/: Cargo.toml
2024/day11/: Cargo.toml
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day14/: Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
2024/day21/: Cargo.toml
2024/day21/src/: main.rs
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2025/day01/: Cargo.toml
2025/day03/: Cargo.toml
2025/day03/src/: main.rs
2025/day04/: Cargo.toml
2025/day05/: Cargo.toml
2025/day06/: Cargo.toml  pad.py
2025/day07/: Cargo.toml
2025/day08/: Cargo.toml
advent/: Cargo.toml
advent-cli/: Cargo.toml
advent-cli/src/: main.rs
advent-toolbox/: Cargo.toml
advent-toolbox/src/: algo.rs  automata.rs  grid.rs  lib.rs  new_spatial.rs  parser_helpers.rs  range.rs  rps.rs  spatial.rs  state_machine.rs  utils.rs
advent-toolbox/src/hashers/: knot.rs  mod.rs
advent/src/: cli.rs  dimension.rs  fetch.rs  grid.rs  input_store.rs  lib.rs  machine.rs  numbers.rs  parse.rs  parsers.rs  ring.rs  space.rs
template/: Cargo.toml
template/src/: main.rs
template/template/: Cargo.toml
(+119 files in other folders)
