[package]
name = "advent-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent"
path = "src/main.rs"

[dependencies]
advent = { path = "../advent", features = ["fetch"] }

anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
humantime = "2.1.0"
rpassword =  "7.3.1"
