[package]
name = "advent-toolbox"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
num-traits = "0.2.19"
petgraph = { version = "0.6.5", optional = true }

[features]
petgraph = ["dep:petgraph"]
default = ["petgraph"]

[dev-dependencies]
rstest = "0.26.1"
