[package]
name = "advent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.43"
dirs = "3.0"
itertools = "0.10.1"

reqwest = { version = "0.11.4", features = ["blocking"], optional = true}
url = { version = "2.2.2", optional = true}
# scraper = "0.12.0"

nom = { version = "7.0.0", optional = true}

[features]
fetch = ["reqwest", "url"]
parse = ["nom"]

[dev-dependencies]
rstest = "0.11.0"
