[package]
name = "advent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
dirs = "5.0.1"
itertools = "0.13.0"

reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"], optional = true}
url = { version = "2.5.4", optional = true}
# scraper = "0.12.0"

nom = { version = "7.1.3", optional = true}

[features]
fetch = ["reqwest", "url"]
parse = ["nom"]
default = ["parse"]

[dev-dependencies]
rstest = "0.23.0"
