[package]
name = "day14"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent", features = [] }
md5 = "0.7.0"
rstest = "0.11.0"
anyhow = "1.0.43"
itertools = "0.10.1"
fancy-regex = "0.7.1"
lazy_static = "1.4.0"