[package]
name = "day21"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent", features = ["parse"] }
rstest = "0.11.0"
anyhow = "1.0.43"
itertools = "0.10.1"
nom = "7.0.0"