[package]
name = "day11"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent", features = ["parse"] }
rstest = "0.15.0"
anyhow = "1.0.66"
itertools = "0.10.5"
nom = "7.1.1"