[package]
name = "day23"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent", features = ["parse"] }
advent-toolbox = { version = "0.1.0", path = "../../advent-toolbox" }
rstest = "0.18.2"
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"
colored = "2.1.0"
petgraph = "0.6.4"
