[package]
name = "day03"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent", features = ["parse"] }
advent-toolbox = { version = "0.1.0", path = "../../advent-toolbox" }
rstest = "0.26.1"
anyhow = "1.0.100"
itertools = "0.14.0"
nom = "7.1.3"
rayon = "1.11.0"
